# titanic

./: README.md  pyproject.toml
input/features/: test_features.parquet  train_features.parquet
input/processed/: test_processed.parquet  train_processed.parquet
notebooks/: EDA.ipynb  model_exploration.ipynb  model_exploration_v2.ipynb  sanity_checks.ipynb
output/: lgbm_submission.csv  lr_submission.csv  rf_submission.csv  xgboost_submission.csv
output/models/: lightgbm.joblib  logistic_regression.joblib  random_forest.joblib
output/predictions/: lgbm_submission.csv  lr_submission.csv  rf_submission.csv  xgboost_submission.csv
src/: make_dataset.py
src/data/: data_cleaning.py
src/features/: build_features.py
src/models/: evaluate.py  pipelines.py  predict.py  train.py
